load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "test_support",
    srcs = ["support.go"],
    importpath = "braid/integration",
    testonly = True,
)

go_test(
    name = "lifecycle_test",
    size = "medium",
    srcs = ["lifecycle_test.go"],
    data = ["//cmd/braid"],
    embed = [":test_support"],
    timeout = "short",
)

go_test(
    name = "sync_test",
    size = "medium",
    srcs = ["sync_test.go"],
    data = ["//cmd/braid"],
    embed = [":test_support"],
    timeout = "moderate",
)

go_test(
    name = "subdirectory_test",
    size = "medium",
    srcs = ["subdirectory_test.go"],
    data = ["//cmd/braid"],
    embed = [":test_support"],
    timeout = "short",
)

go_test(
    name = "completion_test",
    size = "medium",
    srcs = ["completion_test.go"],
    data = ["//cmd/braid"],
    embed = [":test_support"],
    timeout = "short",
)

go_test(
    name = "configure_failure_command_test",
    size = "medium",
    srcs = ["setup_failure_test.go"],
    data = ["//cmd/braid"],
    embed = [":test_support"],
    timeout = "short",
)

go_test(
    name = "scoped_state_test",
    size = "medium",
    srcs = ["scoped_state_test.go"],
    data = ["//cmd/braid"],
    embed = [":test_support"],
    timeout = "short",
)

go_test(
    name = "conflict_test",
    size = "medium",
    srcs = ["conflict_test.go"],
    data = ["//cmd/braid"],
    embed = [":test_support"],
    timeout = "short",
)

go_test(
    name = "no_commit_test",
    size = "medium",
    srcs = ["no_commit_test.go"],
    data = ["//cmd/braid"],
    embed = [":test_support"],
    timeout = "moderate",
)
