load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "braid_lib",
    srcs = ["main.go"],
    importpath = "braid/cmd/braid",
    visibility = ["//visibility:private"],
    deps = ["//internal/command"],
)

go_binary(
    name = "braid",
    embed = [":braid_lib"],
    visibility = ["//visibility:public"],
    x_defs = {"braid/internal/cli.DefaultVersion": "{STABLE_BRAID_VERSION}"},
)

go_test(
    name = "braid_test",
    srcs = ["main_test.go"],
    embed = [":braid_lib"],
)
