load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "clitest",
    srcs = ["completion_contract.go"],
    importpath = "braid/internal/clitest",
    testonly = True,
    visibility = ["//visibility:public"],
    deps = ["//internal/cli"],
)

go_test(
    name = "clitest_test",
    srcs = ["completion_contract_test.go"],
    embed = [":clitest"],
    deps = ["//internal/cli"],
)
