load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "command",
    srcs = [
        "add.go",
        "cache.go",
        "diff.go",
        "preflight.go",
        "push.go",
        "remove.go",
        "setup.go",
        "status.go",
        "update.go",
    ],
    importpath = "braid/internal/command",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/cli",
        "//internal/config",
        "//internal/gitexec",
        "//internal/mirror",
        "//internal/pathcheck",
    ],
)

go_test(
    name = "command_test",
    srcs = [
        "add_test.go",
        "diff_test.go",
        "preflight_test.go",
        "push_test.go",
        "remove_test.go",
        "setup_test.go",
        "status_test.go",
        "update_test.go",
    ],
    embed = [":command"],
    deps = [
        "//internal/cli",
        "//internal/config",
        "//internal/testutil",
    ],
)
