load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "command",
    srcs = [
        "add.go",
        "cache.go",
        "diff.go",
        "path.go",
        "preflight.go",
        "push.go",
        "push_message.go",
        "push_provenance.go",
        "remove.go",
        "setup.go",
        "status.go",
        "sync.go",
        "update.go",
    ],
    importpath = "braid/internal/command",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/cli",
        "//internal/config",
        "//internal/gitexec",
        "//internal/mirror",
        "//internal/pathcheck",
    ],
)

go_test(
    name = "command_test",
    srcs = [
        "add_test.go",
        "cache_test.go",
        "diff_test.go",
        "path_test.go",
        "preflight_test.go",
        "push_test.go",
        "remove_test.go",
        "setup_test.go",
        "status_test.go",
        "sync_test.go",
        "update_test.go",
    ],
    embed = [":command"],
    timeout = "long",
    deps = [
        "//internal/cli",
        "//internal/config",
        "//internal/testutil",
    ],
)
