load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "command",
    srcs = [
        "add.go",
        "cache.go",
        "diff.go",
        "path.go",
        "preflight.go",
        "progress.go",
        "push.go",
        "push_message.go",
        "push_provenance.go",
        "remove.go",
        "setup.go",
        "status.go",
        "sync.go",
        "update.go",
    ],
    importpath = "braid/internal/command",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/cli",
        "//internal/config",
        "//internal/gitexec",
        "//internal/mirror",
        "//internal/pathcheck",
    ],
)

COMMAND_TEST_DEPS = [
    "//internal/cli",
    "//internal/config",
    "//internal/gitexec",
    "//internal/mirror",
    "//internal/testutil",
]

go_library(
    name = "command_test_support",
    srcs = ["test_support_test.go"],
    embed = [":command"],
    importpath = "braid/internal/command",
    testonly = True,
    deps = COMMAND_TEST_DEPS,
)

go_test(
    name = "add_test",
    srcs = ["add_test.go"],
    embed = [":command_test_support"],
    timeout = "short",
    deps = COMMAND_TEST_DEPS,
)

go_test(
    name = "cache_test",
    srcs = ["cache_test.go"],
    embed = [":command_test_support"],
    timeout = "short",
    deps = COMMAND_TEST_DEPS,
)

go_test(
    name = "diff_test",
    srcs = ["diff_test.go"],
    embed = [":command_test_support"],
    timeout = "short",
    deps = COMMAND_TEST_DEPS,
)

go_test(
    name = "path_test",
    srcs = ["path_test.go"],
    embed = [":command_test_support"],
    timeout = "short",
    deps = COMMAND_TEST_DEPS,
)

go_test(
    name = "preflight_test",
    srcs = ["preflight_test.go"],
    embed = [":command_test_support"],
    timeout = "short",
    deps = COMMAND_TEST_DEPS,
)

go_test(
    name = "progress_test",
    srcs = ["progress_test.go"],
    embed = [":command"],
    timeout = "short",
)

go_test(
    name = "push_test",
    srcs = ["push_test.go"],
    embed = [":command_test_support"],
    timeout = "moderate",
    deps = COMMAND_TEST_DEPS,
)

go_test(
    name = "remove_test",
    srcs = ["remove_test.go"],
    embed = [":command_test_support"],
    timeout = "short",
    deps = COMMAND_TEST_DEPS,
)

go_test(
    name = "configure_command_test",
    srcs = ["setup_test.go"],
    embed = [":command_test_support"],
    timeout = "short",
    deps = COMMAND_TEST_DEPS,
)

go_test(
    name = "status_test",
    srcs = ["status_test.go"],
    embed = [":command_test_support"],
    timeout = "short",
    deps = COMMAND_TEST_DEPS,
)

go_test(
    name = "sync_test",
    srcs = ["sync_test.go"],
    embed = [":command_test_support"],
    timeout = "moderate",
    deps = COMMAND_TEST_DEPS,
)

go_test(
    name = "refresh_command_test",
    srcs = ["update_test.go"],
    embed = [":command_test_support"],
    timeout = "moderate",
    deps = COMMAND_TEST_DEPS,
)
