load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "testutil",
    srcs = ["git.go"],
    importpath = "braid/internal/testutil",
    visibility = ["//visibility:public"],
    deps = ["//internal/gitexec"],
)

go_test(
    name = "testutil_test",
    srcs = ["git_test.go"],
    data = ["//testdata/fixtures"],
    embed = [":testutil"],
)

go_test(
    name = "ruby_oracle_test",
    srcs = ["ruby_oracle_test.go"],
    tags = ["manual"],
    deps = ["//internal/mirror"],
)
